--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
