--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.3",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-select": "^5.7.3",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.10",
     "typescript": "5.0.4",
