--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "axios": "^1.4.0",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.30.0",
     "eslint": "8.39.0",
