--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.10",
