--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.10",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.8",
